--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,14 @@ main {
 	padding: 100px 20px 0px 20px;
 }
 
-h3 {
+h2 {
 	color: #52D6D3;
+	font-size: 1rem;
 }
 
+/* NAVIGATION */
 a {
+	font-size: 1rem;
 	color: #52D6D3;
 	letter-spacing: 2px;
 	text-decoration: none;
@@ -71,13 +74,83 @@ a:hover {
 	margin: auto;
 }
 
-
+/* VIDEO */
 
 #video_wrapper {
 	text-align: center;
 	padding: 20px 0px 20px 0px;
 }
 
+
+/* PRICING GRID */
+
+.plan ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.plan ul li {
+  border-bottom: 1px solid rgba(0,0,0,0.1);
+  padding: 10px;
+}
+
+.plan ul li:last-child {
+  border-bottom: 0;
+}
+
+.plan a {
+  text-decoration: none;
+  background: #52D6D3;
+  padding: 10px;
+  color: black;
+  border-radius: 4px;
+}
+
+
+.plan h3 {
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 2px;
+  text-shadow: 3px 3px 0 rgba(0,0,0,0.1);
+}
+
+.price {
+  font-size: 2rem;
+  margin: 10px 0;
+}
+
+/* Flex Container */
+.pricing-grid {
+  max-width: 750px;
+  margin: 0 auto;
+
+  display: flex;
+  /*align-items: center;*/
+}
+
+/* Flex Item */
+.plan {
+	background: #d0d0d0;
+	margin: 20px;
+	padding: 20px;
+	border-radius: 4px;
+	text-align: center;
+
+	flex: 1;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.plan > * {
+	flex: 1 1 100%;
+}
+
+.plan .cta {
+	align-self: flex-end;
+}
+
+/* INSPIRATION SECTION */
 form {
 	text-align: center;
 }
