--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,14 @@ html {
 body {
 	font-family: 'Oxygen Mono', monospace;
 	margin: 0;
+	background-color: #f1f1f1;
 }
 
 main {
 	max-width: 950px;
 	margin: 0 auto;
 	padding: 100px 20px 40px 20px;
+	background-color: white;
 }
 
 h2 {
@@ -190,3 +192,24 @@ form {
 *:focus {
     outline: none;
 }
+
+
+@media all and (max-width: 760px) {
+	
+	.pricing-grid {
+    flex-direction: column;
+  }
+   .cta {
+      margin-bottom: 1.5em;
+      margin-left: 2em;
+      margin-right: 2em;
+   }
+   
+   .plan ul li {
+      margin-left: 2em;
+      margin-right: 2em;
+   }
+}
+
+
+
