--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,10 @@ main {
 	background-color: white;
 }
 
+section {
+	padding-top: 80px;
+}
+
 h2 {
 	color: #52D6D3;
 	font-size: 1rem;
@@ -42,10 +46,6 @@ a:hover {
 	color: #b8f7f5;
 }
 
-#about, #products, #inspiration {
-	padding: 10px 0px 10px 0px;
-}
-
 /* Flex Container*/
 #nav-bar ul {
 	width: 100%;
@@ -58,6 +58,7 @@ a:hover {
 	justify-content: center;
 	align-items: center;
 	position: fixed;
+	z-index: 1;
 }
 
 /* Flex Item */
@@ -78,9 +79,18 @@ a:hover {
 
 /* VIDEO */
 
-#video_wrapper {
-	text-align: center;
-	padding: 20px 0px 20px 0px;
+#video_wrapper { 
+	padding-top: 20px;
+	width: 100%;
+	height: 0;
+	padding-bottom: 56.25%;
+	position: relative;
+}
+
+iframe {
+	position: absolute;
+	width: 100%;
+	height: 100%;
 }
 
 
@@ -133,7 +143,6 @@ a:hover {
   margin: 0 auto;
 
   display: flex;
-  /*align-items: center;*/
 }
 
 /* Flex Item */
