--- a/css/styles.css
+++ b/css/styles.css
@@ -80,9 +80,9 @@ a:hover {
 /* VIDEO */
 
 #video_wrapper { 
-	padding-top: 20px;
-	width: 100%;
 	height: 0;
+	/*width: 100%;*/
+	padding-top: 20px;
 	padding-bottom: 56.25%;
 	position: relative;
 }
@@ -92,7 +92,6 @@ iframe {
 	width: 100%;
 	height: 100%;
 }
-
 
 /* PRICING GRID */
 
@@ -116,7 +115,7 @@ iframe {
   background: #52D6D3;
   padding: 10px;
   color: black;
-  border-radius: 4px;
+  border-radius: 500px;
 }
 
 .plan a:hover {
@@ -139,7 +138,7 @@ iframe {
 
 /* Flex Container */
 .pricing-grid {
-  max-width: 750px;
+  max-width: 900px;
   margin: 0 auto;
 
   display: flex;
@@ -150,7 +149,7 @@ iframe {
 	background: #d0d0d0;
 	margin: 20px;
 	padding: 20px;
-	border-radius: 4px;
+	border-radius: 8px;
 	text-align: center;
 
 	flex: 1;
@@ -174,7 +173,9 @@ form {
 
 #email {
 	font-family : inherit;
-	height: 40px;
+	font-size: 0.9375em;
+	height: 48px;
+	width: 250px;
 	padding-left: 8px;
   border: 1px solid #c0c0c0;
   border-radius: 5px;
@@ -183,14 +184,14 @@ form {
 #submit {
 	background-color: #52D6D3; /*turquoise*/
   border: solid 2px #52D6D3;
-  border-radius: 4px;
+  border-radius: 500px;
 	cursor: pointer;
 	font-family: inherit;
 	font-size: 1em;
   transition-duration: 0.3s;
 	width: 135px;
 	height: 50px;
-	margin: 0;
+	margin: 15px 15px 15px 15px;
 }
 
 #submit:hover {
