--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,6 @@ a:hover {
 #nav-bar ul {
 	width: 100%;
 	background-color: #4e4e4e;
-	border-bottom: 1px solid black;
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -68,6 +67,7 @@ a:hover {
 
 #nav-bar .logo {
 	flex: 1;
+	text-align: center;
 }
 
 #header-img {
